unpackaged/objects/MDMemberReportHeader__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>FA__c</fullName>
        <label>FA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCV__c</fullName>
        <label>FCV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC__c</fullName>
        <label>FC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FX__c</fullName>
        <label>FX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H__c</fullName>
        <label>H</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA__c</fullName>
        <label>MA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCV__c</fullName>
        <label>MCV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC__c</fullName>
        <label>MC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX__c</fullName>
        <label>MX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M__c</fullName>
        <label>M</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SA__c</fullName>
        <label>SA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCV__c</fullName>
        <label>SCV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC__c</fullName>
        <label>SC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SX__c</fullName>
        <label>SX</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S__c</fullName>
        <label>S</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seq__c</fullName>
        <label>Seq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MD Member Report Header</label>
</CustomObject>